--- a/app/src/main/res/layout/activity_health_dashboard.xml
+++ b/app/src/main/res/layout/activity_health_dashboard.xml
@@ -107,7 +107,7 @@
                             android:layout_height="18dp"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="15dp"
-                            android:background="@color/white"
+                            android:background="#F8F8F9"
                             android:scaleType="fitCenter"
                             android:src="@drawable/hd_edit" />
 
@@ -116,7 +116,7 @@
                             android:layout_height="25dp"
                             android:layout_marginLeft="100dp"
                             android:layout_marginTop="15dp"
-                            android:background="@color/white"
+                            android:background="#F8F8F9"
                             android:scaleType="fitCenter"
                             android:src="@drawable/hd_pause" />
                     </LinearLayout>
@@ -159,7 +159,6 @@
                             <ImageView
                                 android:layout_width="16dp"
                                 android:layout_height="22.5dp"
-                                android:background="@color/white"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/hd_location" />
 
@@ -194,9 +193,8 @@
                             <ImageView
                                 android:layout_width="16dp"
                                 android:layout_height="22.5dp"
-                                android:background="@color/white"
                                 android:scaleType="fitCenter"
-                                android:src="@drawable/hd_burn" />
+                                android:src="@drawable/hd_fire" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -227,7 +225,6 @@
                             <ImageView
                                 android:layout_width="16dp"
                                 android:layout_height="22.5dp"
-                                android:background="@color/white"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/hd_time" />
 
@@ -254,34 +251,213 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="354dp"
+                android:layout_height="118dp"
                 android:layout_marginTop="17dp"
                 android:backgroundTint="#F8F8F9"
                 app:cardCornerRadius="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="22dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Daily Average: "
-                        android:textColor="@color/black"
-                        android:textSize="16dp" />
+                        android:layout_marginLeft="22dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3409"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Daily Average: "
+                            android:textColor="@color/black"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3409"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"
+                            android:textStyle="bold"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="M"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="T"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="W"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="T"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="F"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="S"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="16dp"
+                                android:layout_height="22.5dp"
+                                android:scaleType="fitCenter"
+                                android:src="@drawable/hd_1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:alpha="0.75"
+                                android:text="Su"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
-
-
-
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
     </ScrollView>
