--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -8,8 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="name"
+        
+        android:textColor="@color/black"
         android:layout_centerVertical="true"
-        android:gravity="end"
-        android:layout_marginEnd="15dp"/>
+        android:layout_marginStart="15dp"/>
 
 </RelativeLayout>
