--- a/app/src/main/res/layout/activity_medicine_details_page.xml
+++ b/app/src/main/res/layout/activity_medicine_details_page.xml
@@ -14,11 +14,37 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:background="@color/drcard_blue"
+            android:gravity="center|left"
+            android:textSize="18dp"
+            android:paddingLeft="12dp"
+            android:textStyle="bold"
+            android:text="SELECT MEDICINE"
+            android:textColor="@color/white"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"/>
+
         <Spinner
             android:id="@+id/spinner_MEDICINE"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="17dp"/>
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="1dp" />
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
