--- a/app/src/main/res/drawable/bg_spinner_medicine.xml
+++ b/app/src/main/res/drawable/bg_spinner_medicine.xml
@@ -4,10 +4,16 @@
     <layer-list>
         <item>
             <shape android:shape="rectangle">
-                <solid android:color="@color/drcard_blue"
+                <solid android:color="@color/drcard_blue"/>
+                <padding android:right="12dp" android:left="12dp"/>
             </shape>
         </item>
-        
+        <item android:drawable="@drawable/spinner_select_medicine"
+            android:gravity="end">
+<!--            <shape android:shape="rectangle">-->
+<!--            <solid android:color="@color/white"/>-->
+<!--            </shape>-->
+        </item>
     </layer-list>
 </item>
 </selector>
