--- a/app/src/main/res/layout/activity_medicine_details_page.xml
+++ b/app/src/main/res/layout/activity_medicine_details_page.xml
@@ -21,9 +21,19 @@
             android:orientation="vertical"
             android:paddingBottom="10dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            <!--        <Spinner-->
+            <!--            android:spinnerMode="dropdown"-->
+            <!--            android:id="@+id/spinner_MEDICINE"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:dropDownVerticalOffset="37dp"-->
+            <!--            android:layout_height="37dp"-->
+            <!--            android:layout_marginEnd="20dp"-->
+            <!--            android:layout_marginStart="20dp"-->
+            <!--            android:layout_marginTop="1dp"-->
+            <!--            android:dropDownWidth="200dp"-->
+            <!--            android:background="@drawable/bg_spinner_medicine"/>-->
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="37dp"
@@ -36,15 +46,37 @@
             android:textColor="@color/white"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"/>
+            <AutoCompleteTextView
+                android:id="@+id/actv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="1dp"
+                android:hint="Select Medicine"
+                android:completionThreshold="1" />
 
-        <Spinner
-            android:id="@+id/spinner_MEDICINE"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="1dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:background="@color/drcard_blue"
+                android:gravity="center|left"
+                android:textSize="18dp"
+                android:paddingLeft="12dp"
+                android:textStyle="bold"
+                android:text="DURATION"
+                android:textColor="@color/white"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"/>
+            <AutoCompleteTextView
+                android:id="@+id/actv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="1dp"
+                android:hint="Select Duration"
+                android:completionThreshold="1" />
         </LinearLayout>
     </ScrollView>
-
 </RelativeLayout>
