--- a/app/src/main/res/layout/activity_medicine_details_page.xml
+++ b/app/src/main/res/layout/activity_medicine_details_page.xml
@@ -47,7 +47,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"/>
             <AutoCompleteTextView
-                android:id="@+id/actv"
+                android:id="@+id/actv_medicine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
@@ -66,10 +66,11 @@
                 android:textStyle="bold"
                 android:text="DURATION"
                 android:textColor="@color/white"
+                android:layout_marginTop="112dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"/>
             <AutoCompleteTextView
-                android:id="@+id/actv"
+                android:id="@+id/actv_duration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
