--- a/app/src/main/res/layout/activity_medicine_details_page.xml
+++ b/app/src/main/res/layout/activity_medicine_details_page.xml
@@ -34,66 +34,104 @@
             <!--            android:background="@drawable/bg_spinner_medicine"/>-->
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:background="@color/drcard_blue"
-            android:gravity="center|left"
-            android:textSize="18dp"
-            android:paddingLeft="12dp"
-            android:textStyle="bold"
-            android:text="SELECT MEDICINE"
-            android:textColor="@color/white"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@color/drcard_blue"
+                android:gravity="center|left"
+                android:paddingLeft="12dp"
+                android:text="SELECT MEDICINE"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
             <AutoCompleteTextView
                 android:id="@+id/actv_medicine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="1dp"
-                android:hint="Select Medicine"
-                android:completionThreshold="1" />
+                android:layout_marginEnd="20dp"
+                android:completionThreshold="1"
+                android:hint="Select Medicine" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="37dp"
-                android:background="@color/drcard_blue"
-                android:gravity="center|left"
-                android:textSize="18dp"
-                android:paddingLeft="12dp"
-                android:textStyle="bold"
-                android:text="DURATION"
-                android:textColor="@color/white"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"/>
+                android:background="@color/drcard_blue"
+                android:gravity="center|left"
+                android:paddingLeft="12dp"
+                android:text="DURATION"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
             <AutoCompleteTextView
                 android:id="@+id/actv_duration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="1dp"
-                android:hint="Select Duration"
-                android:completionThreshold="1" />
+                android:layout_marginEnd="20dp"
+                android:completionThreshold="1"
+                android:hint="Select Duration" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="37dp"
-                android:background="@color/drcard_blue"
-                android:gravity="center|left"
-                android:textSize="18dp"
                 android:layout_gravity="left"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:textStyle="bold"
-                android:text="Frequency"
-                android:textColor="@color/white"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"/>
+                android:background="@color/drcard_blue"
+                android:gravity="center|left"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:text="Frequency"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Morning"
+                    android:textSize="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"/>
+                <Button
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:text="+"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:background="drawable/btn_layout_medicine"/>
+<!--                <TextView-->
+<!--                    android:layout_width=""-->
+<!--                    android:layout_height=""/>-->
+                <Button
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:text="+"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:background="drawable/btn_layout_medicine"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
